- added : timeline and its elements  - fixed : position and z-index of needed elements

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,11 +3,13 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require utils
  *= require bootstrap_and_overrides 
 */
 
 @import "settings";
+@import "compass";
+@import "utils";
+
 
 * { font-size-adjust: 0.57;  }
 
@@ -17,14 +19,14 @@
 // =======================
 
 #header.fd-ui-ct-header {
-	background: $fd-ui-bg-img-lgry transparent;
-  border-bottom: 4px solid #EEEEEE;
+  background: $fd-ui-bg-img-lgry transparent;
+  border-bottom: 4px solid $fd-ui-ly-col-org;
   display: block;
   height: 126px;
   position: fixed;
   top: 40px;
   width: 100%;
-  z-index: 1;
+  z-index: 5;
 
   #logo {
 		background: image-url("ui/fd-ui-ux-sprite.png") left 0 no-repeat transparent;
@@ -57,6 +59,7 @@
 #sidebar {
 	//position:fixed;
 	//left:0;
+
 	height:100%;
 	ul.sidebar-menu { 
 		background: $fd-ui-bg-img-red transparent; 
@@ -72,7 +75,7 @@
 		a {
 			display: block;
 			padding: 8px 20px;
-			color: #fff;
+			color: $white;
 			.icon-plus {
 				opacity:0.5;
 			}
@@ -120,39 +123,159 @@
 }
 
 .fd-ui-container {
+    overflow:hidden;
 	#fd-ui-sidebar-left {
 		display: block;
-    position: fixed;
-    width: 230px;
-    left:0;
-    height:100%;
-    top: 170px;
+        position: fixed;
+        width: 230px;
+        left:0;
+        height:100%;
+        top: 170px;
+        z-index: 7;
 	}
 	#fd-ui-center {
-		float: left;
-    margin-left: 230px;
-    position: relative;
-    top: 112px;
-    width: 800px;
+    	float: left;
+        margin-left: 230px;
+        position: relative;
+        top: 171px;
+        width: 800px;
+        .fd-ui-tools {
+        	border: 1px solid $fd-ui-ly-col-gry;
+            width:100%;
+            background-color: #E9E9E9;
+            @include box-shadow(0 2px 8px 0 #E7E7E7);
+            height: 35px;
+            opacity: 0.94;
+            position: fixed;
+            top: 170px;
+            z-index: 5;
+        }
+        .timeline {
+    	    background: image-url("ui/timeline-indic.png") 77px top repeat-y transparent;
+    	    padding-top: 50px;
+
+    	    .fd-ui-divider {
+    	    	@extend .fd-divider-bottom;
+    	    }
+    	  }
+
+        .fd-ui-tl-item {
+        	display:block;
+        	border: 1px solid $white;
+        	background-color:$fd-ui-ft-col-blk5;
+    	    @include box-shadow(0 0 1px 1px $fd-ui-ft-col-blk3);
+    	    margin: 0px 0 0 97px;
+    	    position:relative;
+
+        	.fd-ui-tl-item-hd {
+        		padding: 5px;
+    		    
+        		.fd-ui-avt {
+        			display:block;
+        			margin-right:20px;
+        			float:left;
+        			&.default {
+        				background-position:-449px -3057px;
+        			}
+    		  		&.small {
+    		    		height:40px;
+    		    		width:40px;
+    		    	}
+    		  	}	
+        	}
+        	.fd-ui-tl-item-ct {
+                overflow:hidden;
+                background: none repeat scroll 0 0 $white;
+                p {
+                    line-height:$txtLineHeight;
+                }
+                .fd-ui-tl-item-ct-el {
+                    @extend .fd-divider-top;
+                    padding: 5px;
+                    width: 99%;
+                    &.full-bg {
+                        background-color:$fd-ui-ft-col-blk5;
+                        height:35px;
+                    }
+                    &.full-size {
+                        min-height: 250px;    
+                    }
+                    &.borded {
+                        @include box-shadow(-2px 0 0 6px #F6F6F6 inset);    
+                    }
+                }
+        	}
+        	.fd-ui-tl-item-hd {
+        		height: 40px;
+                background-color: $fd-ui-ft-col-blk4;
+        		.fd-ui-tl-item-title {
+        			float:left;
+        			h1 {
+        				font-size:14px;
+        				color: $fd-ui-ft-col-blk2;
+        				line-height:21px;
+    				    @include text-shadow($fd-ui-sh-white);
+        			}
+        			h4 {
+        				font-size: $baseFontSize;
+        				color: $fd-ui-ft-col-blk3;
+    				    font-size: 11px;
+    				    font-weight: normal;
+    				    @include text-shadow($fd-ui-sh-white);
+        			}
+        		}
+        	}
+        	.fd-ui-tl-item-indic {
+        		background: $fd-ui-bg-sprite -597px -97px transparent;
+        		width:54px;
+        		height:100px;
+        		position:absolute;
+        		top:0;
+        		z-index: 2;
+        		left:-55px;
+        	}
+        	&:hover {
+        		.fd-ui-tl-item-indic {
+        			background-position: -657px -97px;
+        		}
+        		.fd-ui-icon.post {
+        			background-position: -670px -202px;
+        			opacity:0.99;
+        		}
+        	}
+
+        	// with icons
+        	.fd-ui-icon.post {
+        		background: $fd-ui-bg-sprite -625px -202px transparent;
+        		width:30px;
+        		height: 50px;
+        		position:absolute;
+        		top:0;
+        		z-index: 2;
+        		left:-70px;
+        		opacity:0.5;
+        	}
+        }
 	}
+    .fd-ui-sidebar-common {
+        display: block;
+        position: fixed;
+        float: right;
+        width: 320px;
+        height: 100%;
+        top:170px;
+        z-index: 5;
+    }
 	#fd-ui-sidebar-right1 {
 		border-left: 1px solid #787373;
-    border-right: 1px solid #111111;
-    box-shadow: -1px 0 0 #000000;
-    display: block;
-    float: right;
-    height: 100%;
-    position: fixed;
-    right: 320px;
-    width: 320px;
+        border-right: 1px solid #111111;
+        @include box-shadow(-1px 0 0 #000000);
+        right: 320px;
+        @extend .fd-ui-sidebar-common;
 	}
 	#fd-ui-sidebar-right2 {
 		border-left: 1px solid #3A3A3A;
-    display: block;
-    float: right;
-    height: 100%;
-    position: fixed;
-    right: -1px;
-    width: 320px;
+        right: -1px;
+        @extend .fd-ui-sidebar-common;
 	}
 }
