--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -27,5 +27,12 @@ a,a:hover { text-decoration: none;cursor:pointer;}
 				right:7px;
 			}
 		}
+		.nav {
+			.dropdown.open {
+				a.dropdown-toggle {
+					background-color: $navbarLinkBackgroundActive;
+				}
+			}
+		}
 	}
 }
