--- a/app/assets/stylesheets/settings.css.scss
+++ b/app/assets/stylesheets/settings.css.scss
@@ -8,16 +8,18 @@
 
 // layout color
 $fd-ui-ly-col-blk: #333333;
+$fd-ui-ly-col-gry: #dadada;
 $fd-ui-ly-col-red: #871E1C;
 $fd-ui-ly-col-yel: #FFFDCE;
 $fd-ui-ly-col-blu: #1C6677;
 $fd-ui-ly-col-org: #E39A00;
+$white 					 : #ffffff;
 
 // font & text color
 $fd-ui-ft-col-blk1: #111111;
 $fd-ui-ft-col-blk2: #333333;
-$fd-ui-ft-col-blk3: #B4B4B4;
-$fd-ui-ft-col-blk4: #E9E9E9;
+$fd-ui-ft-col-blk3: #A3A3A3;
+$fd-ui-ft-col-blk4: #f2f2f2;
 $fd-ui-ft-col-blk5: #F6F6F6;
 
 // alert messages color
@@ -32,6 +34,12 @@ $fd-ui-bg-img-blk: image-url("ui/pattern-blk.jpg") repeat-y;
 $fd-ui-bg-img-red: image-url("ui/pattern-red.jpg") repeat-y;
 $fd-ui-bg-img-lgry: image-url("ui/pattern-lgry.jpg") repeat-x;
 $fd-ui-bg-img-bgry: image-url("ui/pattern-bgry.jpg") repeat;
+$fd-ui-bg-sprite  : image-url("ui/fd-ui-ux-sprite.png");
+
+// shadow
+$fd-ui-sh-white: 0 1px 0 $white;
+
+$txtLineHeight: 28px;
 
 body {
 	background: $fd-ui-bg-img-bgry;
@@ -70,9 +78,9 @@ $iconWhiteSpritePath	: image-path('glyphicons-halflings-white.png');
 //$fluidGridGutterWidth :;
 
 // Typography
-$baseFontSize 				  : 11px;
+$baseFontSize 				  : 12px;
 $baseFontFamily				  : 'droid sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-//$baseLineHeight 			:;
+//$baseLineHeight 				: 28px;
 //$altFontFamily 				:;
 //$headingsFontFamily 	:;	
 //$headingsFontWeight 	:;
@@ -94,8 +102,8 @@ $baseFontFamily				  : 'droid sans', 'Helvetica Neue', Helvetica, Arial, sans-se
 //$navbarText $navbarLinkColor 	:;	
 //$navbarLinkColorHover 				:;
 //$navbarLinkColorActive 				:;
-//$navbarLinkBackgroundHover 		:;	
-//$navbarLinkBackgroundActive 	:;	
+$navbarLinkBackgroundHover 			: $fd-ui-ft-col-blk1;	
+$navbarLinkBackgroundActive 		: $fd-ui-ft-col-blk1;		
 //$navbarSearchBackground 			:;	
 //$navbarSearchBackgroundFocus 	:;		
 //$navbarSearchBorder 					:;	
